리소스 적용 완료

--- a/whale-clock/index.html
+++ b/whale-clock/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang= "ko">
   <head>
+    <title>Whale-Clock</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>whale-clock</title>
+    <meta name="author" content="Whale-Clock">
+    <meta name="description" content="웨일 감성 시계에요">
+    <meta name="Other Agent" content="Whale-Clock">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Whale-Clock">
+    <meta property="og:title" content="Whale-Clock">
+    <meta property="og:description" content="웨일 감성 시계에요">
+    <link rel="icon" href="./src/assets/favicon.ico?v=2" type="image/x-icon">
   </head>
   <body>
     <div id="app"></div>
