--- a/whale-clock/index.html
+++ b/whale-clock/index.html
@@ -12,7 +12,7 @@
     <meta property="og:site_name" content="Whale-Clock">
     <meta property="og:title" content="Whale-Clock">
     <meta property="og:description" content="웨일 감성 시계에요">
-    <link rel="icon" href="./src/assets/favicon.ico?v=2" type="image/x-icon">
+    <link rel="icon" href="src/assets/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div id="app"></div>
