--- a/whale-clock/index.html
+++ b/whale-clock/index.html
@@ -13,6 +13,7 @@
     <meta property="og:title" content="Whale-Clock">
     <meta property="og:description" content="웨일 감성 시계에요">
     <link rel="icon" href="src/assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
   </head>
   <body>
     <div id="app"></div>
