2차 구현 시작 - 날씨 정보 가져오기

--- a/whale-clock/index.html
+++ b/whale-clock/index.html
@@ -15,6 +15,7 @@
     <link rel="icon" href="src/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
