--- a/whale-clock/index.html
+++ b/whale-clock/index.html
@@ -14,7 +14,7 @@
     <meta property="og:description" content="웨일 감성 시계에요">
     <link rel="icon" href="src/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
-    <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">-->
   </head>
   <body>
     <div id="app"></div>
